src/test/ui/issues/issue-4335.stderr
error[E0507]: cannot move out of `v`, a captured variable in an `FnMut` closure
  --> $DIR/issue-4335.rs:6:20
   |
LL | fn f<'r, T>(v: &'r T) -> Box<dyn FnMut() -> T + 'r> {
   |             - captured outer variable
LL |     id(Box::new(|| *v))
   |                    ^^ move occurs because `v` has type `T`, which does not implement the `Copy` trait

error[E0507]: cannot move out of `*v` which is behind a shared reference
  --> $DIR/issue-4335.rs:6:17
   |
LL |     id(Box::new(|| *v))
   |                 ^^ --
   |                 |  |
   |                 |  move occurs because `*v` has type `T`, which does not implement the `Copy` trait
   |                 |  move occurs due to use in closure
   |                 move out of `*v` occurs here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
